# codecrafters-redis-c

./: CMakeLists.txt  README.md  your_program.sh
app/: server.c
src/: String.h  main.c  sha256.h  stb_ds.h
